examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/int_literal_reconstruct.st
language core;

extend with #type-reconstruction, #natural-literals;


fn main(n : Nat) -> Bool {
  return 5;
}


//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
